added dashboard templates

--- a/home/templates/bids.html
+++ b/home/templates/bids.html
@@ -151,7 +151,7 @@
                                             {% endif %}
                                         </td>
                                         <td class="text-end">
-                                            <a href="#" class="btn btn-sm btn-neutral">View</a>
+                                            <a href="/edit_bid/?id={{ bid.id }}" class="btn btn-sm btn-neutral">View</a>
                                             <button type="button" class="btn btn-sm btn-square btn-neutral text-danger-hover">
                                                 <i class="bi bi-trash"></i>
                                             </button>
