--- a/home/templates/dashboard.html
+++ b/home/templates/dashboard.html
@@ -228,7 +228,7 @@
                                 <div class="row">
                                     <div class="col">
                                         <span class="h6 font-semibold text-muted text-sm d-block mb-2">On Going Bids</span>
-                                        <span class="h3 font-bold mb-0">6</span>
+                                        <span class="h3 font-bold mb-0">{{ on_going_bid_count }}</span>
                                     </div>
                                     <div class="col-auto">
                                         <div class="icon icon-shape bg-primary text-white text-lg rounded-circle">
@@ -245,7 +245,7 @@
                                 <div class="row">
                                     <div class="col">
                                         <span class="h6 font-semibold text-muted text-sm d-block mb-2">Finished Bids</span>
-                                        <span class="h3 font-bold mb-0">1</span>
+                                        <span class="h3 font-bold mb-0">{{ bid_finished_count }}</span>
                                     </div>
                                     <div class="col-auto">
                                         <div class="icon icon-shape bg-info text-white text-lg rounded-circle">
