--- a/home/templates/category-list.html
+++ b/home/templates/category-list.html
@@ -43,7 +43,7 @@
                                 {% for categorie in categories %}
                                 <tr>
                                     
-                                    <td>{{ loop.index }}</td>
+                                    <td>{{ forloop.counter }}</td>
                                     
                                     <td>{{ categorie.category }}</td>
                                    
