--- a/home/templates/user-domanis-list.html
+++ b/home/templates/user-domanis-list.html
@@ -61,7 +61,7 @@
                             <tbody>
                                 {% for data in datas %}
                                 <tr>
-                                    <td>{{ loop.index }}</td>
+                                    <td>{{ forloop.counter }}</td>
                                     
                                     <td>{{ data.name }}</td>
                                    
