--- a/home/templates/view-product-scrvices-scrap.html
+++ b/home/templates/view-product-scrvices-scrap.html
@@ -64,7 +64,7 @@
                                 {% for obj in datas %}
                                 <tr>
                                     
-                                    <td>{{ loop.index }}</td>
+                                    <td>{{ forloop.counter }}</td>
                                     
                                     <td>{{ obj.item }}</td>
                                     <td>{{ obj.description }}</td>
