--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -132,7 +132,7 @@
                                 <img src="{% static 'assets/images/users/profile-pic.jpg' %}" alt="user"
                                     class="rounded-circle" width="40">
                                 <span class="ml-2 d-none d-lg-inline-block"><span>Hello,</span> <span
-                                        class="text-dark">Jason Doe</span> <i data-feather="chevron-down"
+                                        class="text-dark">{{request.user.name}}</span> <i data-feather="chevron-down"
                                         class="svg-icon"></i></span>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right user-dd animated flipInY">
@@ -179,9 +179,17 @@
                                 aria-expanded="false"><i data-feather="message-square" class="feather-icon"></i><span
                                     class="hide-menu">Manufacturers</span></a></li>
 
+                        <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="{% url 'service-provider-users-by-type' %}"
+                                aria-expanded="false"><i data-feather="message-square" class="feather-icon"></i><span
+                                    class="hide-menu">Service Provider</span></a></li>
+
                         <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="{% url 'referral_list' %}"
                                 aria-expanded="false"><i data-feather="calendar" class="feather-icon"></i><span
                                     class="hide-menu">Referrals</span></a></li>
+
+                        <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="{% url 'refers_list' %}"
+                                aria-expanded="false"><i data-feather="calendar" class="feather-icon"></i><span
+                                    class="hide-menu">Refers</span></a></li>
 
                         <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="{% url 'bids-list' %}"
                                 aria-expanded="false"><i data-feather="calendar" class="feather-icon"></i><span
