--- a/home/templates/edit-bid.html
+++ b/home/templates/edit-bid.html
@@ -122,6 +122,13 @@
                     </div>
                 </div>
                 <div class="row mt-3">
+                    <div class="col-md-6">
+                        <label class="labels">Percentage Increment/Decrement</label>
+                        <input type="text" class="form-control" placeholder="enter percentage" name="percentage_inc_dec" id="percentage_inc_dec" value="{{ bid_data.0.percentage_inc_dec }}">
+                    </div>
+                   
+                </div>
+                <div class="row mt-3">
                     <div class="col-md-12">
                         <label class="labels">Description</label>
                         <textarea class="form-control" placeholder="enter description" name="description" id="description" rows="5">{{ bid_data.0.description }}</textarea>
@@ -147,7 +154,7 @@
                 </div>
                 
                 <div class="mt-5 text-center">
-                    <button class="btn btn-primary profile-button" type="submit">Save Profile</button>
+                    <button class="btn btn-primary profile-button" type="submit">Save Bid</button>
                 </div>
                 </form>
             </div>
