--- a/home/templates/sub-category-list.html
+++ b/home/templates/sub-category-list.html
@@ -44,7 +44,7 @@
                                 {% for sub_categorie in sub_categories %}
                                 <tr>
                                     
-                                    <td>{{ loop.index }}</td>
+                                    <td>{{ forloop.counter }}</td>
                                     
                                     <td>{{ sub_categorie.category_id }}</td>
                                     <td>{{ sub_categorie.sub_category }}</td>
@@ -53,7 +53,9 @@
                                         <a href="" class="btn btn-sm btn-neutral">View</a>
                                         <button type="button"
                                             class="btn btn-sm btn-square btn-neutral text-danger-hover">
-                                            <i class="bi bi-trash"></i>
+                                            <a href="{% url 'delete_sub_category' id=sub_categorie.id %}" 
+                                                <i class="bi bi-trash"></i>
+                                            </a>
                                         </button>
                                     </td>
                                 </tr>
