--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -283,32 +283,35 @@
                 window.history.back();
             });
 
-
-
-            function toggleApproval(bidId) {
-                $.ajax({
-                    type: 'GET',
-                    url: `/api/toggle_approval/${bidId}/`,
-                    success: function(response) {
-                        if (response.status === 'success') {
-                            const button = $('#approvalButton');
-                            if (response.is_approved === 'yes') {
-                                button.text('Approved').removeClass('btn-danger').addClass('btn-success');
-                            } else {
-                                button.text('Not Approved').removeClass('btn-success').addClass('btn-danger');
-                            }
-                        } else {
-                            console.error(response.message);
-                        }
-                    },
-                    error: function(xhr, status, error) {
-                        console.error(error);
-                    }
-                });
-            }
-
-
     });
+
+
+    function toggleApproval(bidId) {
+        $.ajax({
+            type: 'GET',
+            url: `/api/toggle_approval/${bidId}/`,
+            success: function(response) {
+                if (response.status === 'success') {
+                    const bidStatusElement = $('.current-status');
+                    const button = $('#approvalButton');
+
+                    if (response.is_approved === 'yes') {
+                        bidStatusElement.text('Approved').removeClass('text-danger').addClass('text-success');
+                        button.text('Change Status');
+                    } else {
+                        bidStatusElement.text('Not Approved').removeClass('text-success').addClass('text-danger');
+                        button.text('Change Status');
+                    }
+                } else {
+                    console.error(response.message);
+                }
+            },
+            error: function(xhr, status, error) {
+                console.error(error);
+            }
+        });
+    }
+
 
     
     </script>
