--- a/home/templates/dashboard.html
+++ b/home/templates/dashboard.html
@@ -82,6 +82,27 @@
 
     
     <div class="card-group">
+
+        <div class="card border-right">
+            <a  href="{% url 'bids-list' %}">
+            <div class="card-body">
+                <div class="d-flex d-lg-flex d-md-block align-items-center">
+                    <div>
+                        <div class="d-inline-flex align-items-center">
+                            <h2 class="text-dark mb-1 font-weight-medium">{{ service_provider_count }}</h2>
+                            
+                        </div>
+                        <h6 class="text-muted font-weight-normal mb-0 w-100 text-truncate">service-provider</h6>
+                    </div>
+                    <div class="ml-auto mt-md-3 mt-lg-0">
+                        <span class="opacity-7 text-muted"><i data-feather="user-plus"></i></span>
+                    </div>
+                </div>
+            </div>
+            </a>
+        </div>
+
+
         <div class="card border-right">
             <a  href="{% url 'bids-list' %}">
             <div class="card-body">
@@ -117,7 +138,7 @@
                 </div>
             </div>
         </div>
-        <div class="card border-right">
+        <!-- <div class="card border-right">
             <div class="card-body">
                 <div class="d-flex d-lg-flex d-md-block align-items-center">
                     <div>
@@ -132,7 +153,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="card">
             <div class="card-body">
                 <div class="d-flex d-lg-flex d-md-block align-items-center">
@@ -146,10 +167,48 @@
                 </div>
             </div>
         </div>
-        
     </div>
 </div>
 
+
+
+    <script>
+        
+        $(document).ready(function() {
+
+            document.querySelector('.btn-outline-secondary').addEventListener('click', function() {
+                window.history.back();
+            });
+
+
+
+            function toggleApproval(bidId) {
+                $.ajax({
+                    type: 'GET',
+                    url: `/api/toggle_approval/${bidId}/`,
+                    success: function(response) {
+                        if (response.status === 'success') {
+                            const button = $('#approvalButton');
+                            if (response.is_approved === 'yes') {
+                                button.text('Approved').removeClass('btn-danger').addClass('btn-success');
+                            } else {
+                                button.text('Not Approved').removeClass('btn-success').addClass('btn-danger');
+                            }
+                        } else {
+                            console.error(response.message);
+                        }
+                    },
+                    error: function(xhr, status, error) {
+                        console.error(error);
+                    }
+                });
+            }
+
+
+    });
+
+    
+    </script>
 
 
 {% endblock body %}
