--- a/home/templates/base-service.html
+++ b/home/templates/base-service.html
@@ -191,6 +191,11 @@
                                 aria-expanded="false"><i data-feather="calendar" class="feather-icon"></i><span
                                     class="hide-menu">Bids</span></a></li>
 
+                        <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="{% url 'products_list' %}"
+                                aria-expanded="false"><i data-feather="calendar" class="feather-icon"></i><span
+                                    class="hide-menu">Products</span></a></li>
+        
+
                         <li class="list-divider"></li>
                         <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="{% url 'panel_logout' %}"
                                 aria-expanded="false"><i data-feather="log-out" class="feather-icon"></i><span
@@ -312,6 +317,61 @@
         });
     }
 
+        
+    function toggle_user_assessment_approval(assissment_id) {
+        $.ajax({
+            type: 'GET',
+            
+            url: `/api/toggle-user-assessment-approval/${assissment_id}/`,
+            success: function(response) {
+                if (response.status === 'success') {
+                    const bidStatusElement = $('.current-status');
+                    const button = $('#assessment-approval');
+
+                    if (response.is_approved === 'yes') {
+                        bidStatusElement.text('Approved').removeClass('text-danger').addClass('text-success');
+                        button.text('Change Status');
+                    } else {
+                        bidStatusElement.text('Not Approved').removeClass('text-success').addClass('text-danger');
+                        button.text('Change Status');
+                    }
+                } else {
+                    console.error(response.message);
+                }
+            },
+            error: function(xhr, status, error) {
+                console.error(error);
+            }
+        });
+    }
+
+
+    function toggle_product_approval(product_id) {
+        $.ajax({
+            type: 'GET',
+            
+            url: `/api/toggle-product-approval/${product_id}/`,
+            success: function(response) {
+                if (response.status === 'success') {
+                    const bidStatusElement = $('.current-status');
+                    const button = $('#product-approval');
+
+                    if (response.is_approved === 'yes') {
+                        bidStatusElement.text('Approved').removeClass('text-danger').addClass('text-success');
+                        button.text('Change Status');
+                    } else {
+                        bidStatusElement.text('Not Approved').removeClass('text-success').addClass('text-danger');
+                        button.text('Change Status');
+                    }
+                } else {
+                    console.error(response.message);
+                }
+            },
+            error: function(xhr, status, error) {
+                console.error(error);
+            }
+        });
+    }
 
     
     </script>
