--- a/home/templates/service-support-dashboard.html
+++ b/home/templates/service-support-dashboard.html
@@ -1,5 +1,7 @@
 
-{% extends "base-service.html" %}
+{% extends "base.html" %}
+
+
 
 
 {% block title %}<title> Dashboard</title>  {% endblock title %}
