--- a/home/templates/referral-list.html
+++ b/home/templates/referral-list.html
@@ -29,11 +29,10 @@
                     <table class="table table-hover table-nowrap">
                         <thead class="thead-light">
                             <tr>
-                                <th scope="col">SR No.</th>
-                                <th scope="col">party1 id</th>
-                                <th scope="col">party1 name</th>
-                                <th scope="col">party2 id</th>
-                                <th scope="col">party2 name</th>
+                                <th scope="col">SR No. <i class="fa fa-fw fa-sort"></th>
+                                <th scope="col">party1 name <i class="fa fa-fw fa-sort"></th>
+                                <th scope="col">party2 name <i class="fa fa-fw fa-sort"></th>
+                                <th scope="col">Reffered By Name <i class="fa fa-fw fa-sort"></th>
                                 <th scope="col">Action</th>
 
                             </tr>
