--- a/home/templates/assessment-list.html
+++ b/home/templates/assessment-list.html
@@ -41,9 +41,9 @@
                         <table id="zero_config" class="table table-striped table-bordered no-wrap">
                             <thead>
                                 <tr>
-                                    <th>Sr No.</th>
-                                    <th>Item</th>
-                                    <th>User</th>
+                                    <th>Sr No.  <i class="fa fa-fw fa-sort"></th>
+                                    <th>Item    <i class="fa fa-fw fa-sort"></th>
+                                    <th>User    <i class="fa fa-fw fa-sort"></th>
                                     <th>Action</th>
                                 </tr>
                             </thead>
