--- a/home/templates/category-list.html
+++ b/home/templates/category-list.html
@@ -32,8 +32,8 @@
                         <table id="zero_config" class="table table-striped table-bordered no-wrap">
                             <thead>
                                 <tr>
-                                    <th>Sr No.</th>
-                                    <th>name</th>
+                                    <th>Sr No.  <i class="fa fa-fw fa-sort"></th>
+                                    <th>name    <i class="fa fa-fw fa-sort"></th>
                                     <th>Action</th>
                                 </tr>
                             </thead>
