--- a/home/templates/refer-list.html
+++ b/home/templates/refer-list.html
@@ -26,15 +26,14 @@
                     <h3 class="mb-0">Referral List</h3>
                 </div>
                 <div class="table-responsive">
-                    <table class="table table-hover table-nowrap">
+                    <table table id="zero_config" class="table table-striped table-bordered no-wrap">
                         <thead class="thead-light">
                             <tr>
-                                <th scope="col">SR No.</th>
-                                <th scope="col">party1 id</th>
-                                <th scope="col">party1 name</th>
-                                <th scope="col">party2 id</th>
-                                <th scope="col">party2 name</th>
-                                <th scope="col">Referral Price</th>
+                                <th scope="col">SR No. <i class="fa fa-fw fa-sort"></th>
+                                <th scope="col">party1 name <i class="fa fa-fw fa-sort"></th>
+                                <th scope="col">party2 name <i class="fa fa-fw fa-sort"></th>
+                                <th scope="col">Reffered By Name <i class="fa fa-fw fa-sort"></th>
+                                <th scope="col">Referral Price  <i class="fa fa-fw fa-sort"></th>
                                 <th scope="col">Action</th>
 
                             </tr>
@@ -43,13 +42,15 @@
                             {% for refer in refers %}
                                 <tr>
                                     <td>{{ forloop.counter}}</td>
-                                    <td>{{ refer.manufacturer_id }}</td>
                                     <td>
                                         <a class="text-heading font-semibold" href="#">{{ refer.manufacturer_username }}</a>
                                     </td>
-                                    <td>{{ refer.seller_id }}</td>
                                     <td>
                                         <a class="text-heading font-semibold" href="#">{{ refer.seller_username }}</a>
+                                    </td>
+
+                                    <td>
+                                        <a class="text-heading font-semibold" href="#">{{ refer.reffered_by_name }}</a>
                                     </td>
                                     <td>{{ refer.referral_price }}</td>
                                     <td class="text-end">
