--- a/home/templates/sub-category-list.html
+++ b/home/templates/sub-category-list.html
@@ -32,9 +32,9 @@
                         <table id="zero_config" class="table table-striped table-bordered no-wrap">
                             <thead>
                                 <tr>
-                                    <th>Sr No.</th>
-                                    <th>Category</th>
-                                    <th>Sub Category</th>
+                                    <th>Sr No. <i class="fa fa-fw fa-sort"></th>
+                                    <th>Category    <i class="fa fa-fw fa-sort"></th>
+                                    <th>Sub Category    <i class="fa fa-fw fa-sort"></th>
                                     <th>Action</th>
                                 </tr>
                             </thead>
