--- a/home/templates/supplier-bid-list.html
+++ b/home/templates/supplier-bid-list.html
@@ -28,10 +28,10 @@
                         <table id="zero_config" class="table table-striped table-bordered no-wrap">
                             <thead>
                                 <tr>
-                                    <th>Id</th>
-                                    <th>Item</th>
-                                    <th>Price</th>
-                                    <th>Party name</th>
+                                    <th>Id  <i class="fa fa-fw fa-sort"></th>
+                                    <th>Item    <i class="fa fa-fw fa-sort"></th>
+                                    <th>Price   <i class="fa fa-fw fa-sort"></th>
+                                    <th>Party name  <i class="fa fa-fw fa-sort"></th>
                                     <th>Is approved</th>
                                     <th>Action</th>
                                 </tr>
