--- a/home/templates/user-domanis-list.html
+++ b/home/templates/user-domanis-list.html
@@ -51,8 +51,9 @@
                         <table id="zero_config" class="table table-striped table-bordered no-wrap">
                             <thead>
                                 <tr>
-                                    <th>Sr No.</th>
-                                    <th>name</th>
+                                    <th>Sr No.  <i class="fa fa-fw fa-sort"></th>
+                                    <th>name   <i class="fa fa-fw fa-sort"></th>
+                                    <th>Status</th>
                                     <th>Action</th>
                                 </tr>
                             </thead>
@@ -64,7 +65,23 @@
                                     <td>{{ forloop.counter }}</td>
                                     
                                     <td>{{ data.name }}</td>
-                                   
+                                    <td>
+                                        {% if types %}
+                                        
+                                        <a class="text-heading font-semibold" href="{% url 'user_approve_disapprove' id=data.id %}"> {% if data.is_approved == 'yes' %}
+                                            Enabled
+                                        {% else %}
+                                            Disabled
+                                        {% endif %}</a>
+                                        {% else %}
+                                       
+                                    <a class="text-heading font-semibold" href="{% url 'domain_approve_disapprove' id=data.id %}"> {% if data.is_approved == 'yes' %}
+                                        Enabled
+                                    {% else %}
+                                        Disabled
+                                    {% endif %}</a>
+                                    {% endif %}
+                                   </td>
                                     <td class="text-end">
                                         <a href="" >
                                         <button type="button"
