--- a/home/templates/user-type-list.html
+++ b/home/templates/user-type-list.html
@@ -1,4 +1,17 @@
-{% extends "base.html" %} {% block title %}<title>Bids</title> {% endblock title %} {% block body %}
+{% extends "base.html" %} 
+    {% block title %}<title>
+    {% if "suppliers" in path.request %}
+    suppliers
+      {% elif "manufacturers" in path.request %}
+      manufacturers
+      {% elif "service-provider" in path.request %}
+      service-provider
+      {% elif "referral" in path.request %}
+      referral
+      {% endif %}
+    </title> {% endblock title %} 
+      
+{% block body %}
 
 
 <div class="page-breadcrumb">
@@ -8,7 +21,20 @@
 
                 <nav class="breadcrumb">
                     <a class="breadcrumb-item" href="{% url 'dashboard' %}">Home</a>
-                    <span class="breadcrumb-item active">Bids List</span>
+                  
+                         {% if "suppliers" in request.path %}
+                         <span class="breadcrumb-item active">Suppliers</span>
+                        
+                        {% elif "manufacturers" in request.path %}
+                        <span class="breadcrumb-item active">Manufacturers </span>
+                        
+                        {% elif "service-provider" in request.path %}
+                        <span class="breadcrumb-item active">Service-provider</span>
+                        
+                        {% elif "referral" in request.path %}
+                        <span class="breadcrumb-item active">Referral </span>
+                       
+                        {% endif %}
                 </nav>
             </div>
         </div>
@@ -17,59 +43,81 @@
 </div>
 
 
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12">
+            <div class="card">
+                <div class="card-body">
+                    {% if "suppliers" in request.path %}
+                        <h4 class="card-title">Suppliers</h4>
+                        <h6 class="card-subtitle">List of all suppliers</h6>
+                        {% elif "manufacturers" in request.path %}
+                        <h4 class="card-title">Manufacturers</h4>
+                        <h6 class="card-subtitle">List of all manufacturers</h6>
+                        {% elif "service-provider" in request.path %}
+                        <h4 class="card-title">Service-provider</h4>
+                        <h6 class="card-subtitle">List of all service-provider</h6>
+                        {% elif "referral" in request.path %}
+                        <h4 class="card-title">Referral</h4>
+                        <h6 class="card-subtitle">List of all referral</h6>
+                        {% endif %}</span>
 
-    <!-- Main -->
-    <main class="py-6 bg-surface-secondary">
-        <div class="container-fluid">
-            <div class="card shadow border-0 mb-7">
-                <div class="card-header">
-                    <h5 class="mb-0">{{ user_type }}</h5>
-                </div>
-                <div class="table-responsive">
-                    <table class="table table-hover table-nowrap">
-                        <thead class="thead-light">
-                            <tr>
-                                <th scope="col">id</th>
-                                <th scope="col">name</th>
-                                <th scope="col">username</th>
-                                <th scope="col">company_name</th>
-                                <th scope="col">adhaar_number</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for user in users %}
+                    <div class="table-responsive">
+                        <table id="default_order"
+                                    class="table table-striped table-bordered display no-wrap dataTable"
+                                    style="width: 100%;" role="grid" aria-describedby="default_order_info">
+                            <thead class="thead-light">
                                 <tr>
-                                    <td>
-                                        <a class="text-heading font-semibold" href="#">{{ user.id }}</a>
-                                    </td>
-                                    <td>{{ user.name }}</td>
-                                    <td>
-                                        <a class="text-heading font-semibold" href="#">{{ user.username }}</a>
-                                    </td>
-                                    <td>{{ user.company_name }}</td>
-                                    <td>
-                                        <a class="text-heading font-semibold" href="#">{{ user.adhaar_number }}</a>
-                                    </td>
-                                    <td class="text-end">
-                                        <a href="{% url 'user-profile' id=user.id %}" class="btn btn-sm btn-neutral">View</a>
-                                        <button type="button" class="btn btn-sm btn-square btn-neutral text-danger-hover">
-                                            <i class="bi bi-trash"></i>
-                                        </button>
-                                    </td>
+                                    <th scope="col">Id  <i class="fa fa-fw fa-sort"></th>
+                                  
+                                    <th class="sorting_asc" tabindex="0" aria-controls="default_order" rowspan="1" colspan="1" aria-label="Name: activate to sort column descending" style="width: 128px;" aria-sort="ascending">Name   <i class="fa fa-fw fa-sort"></th>
+                                    <th scope="col">Username    <i class="fa fa-fw fa-sort"></th>
+                                    <th scope="col">Company Name    <i class="fa fa-fw fa-sort"></th>
+                                    <th scope="col">Adhaar Number   <i class="fa fa-fw fa-sort"></th>
+                                    <th scope="col">Status</th>
+                                    <th scope="col">Action</th>
                                 </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
+                            </thead>
+                            <tbody>
+                                {% for user in users %}
+                                    <tr>
+                                        <td>
+                                            <a class="text-heading font-semibold">{{ user.id }}</a>
+                                        </td>
+                                        <td>{{ user.name }}</td>
+                                        <td>
+                                            <a class="text-heading font-semibold" >{{ user.username }}</a>
+                                        </td>
+                                        <td>{{ user.company_name }}</td>
+                                        <td>
+                                            <a class="text-heading font-semibold">{{ user.adhaar_number }}</a>
+                                        </td>
+
+                                        <td>
+                                            <a class="text-heading font-semibold" href="{% url 'approve_disapprove_user' user_id=user.id %}"> {% if user.is_approved == 'yes' %}
+                                                Approved
+                                            {% else %}
+                                                Unapproved
+                                            {% endif %}</a>
+                                        </td>
+                                        <td class="text-end">
+                                            <a href="{% url 'user-profile' id=user.id %}" class="btn btn-sm btn-neutral">View</a>
+                                            <button type="button" class="btn btn-sm btn-square btn-neutral text-danger-hover">
+                                                <i class="bi bi-trash"></i>
+                                            </button>
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                            
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
-    </main>
-    
+    </div>
+
 </div>
-
-
-
 
 
 {% endblock body %}
